--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.8",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.6.15",
